Fix home layout

--- a/src/index.njk
+++ b/src/index.njk
@@ -16,7 +16,10 @@ templateEngineOverride: md, njk
   }
   .tdbc-hero {
     padding-top: 5vh;
-    padding-bottom: 5vh;
+    padding-bottom: 2vh;
+  }
+  main.tdbc-container {
+    padding-top: 0;
   }
   #quickstart + ol li:first-child,
   #quickstart + ol li:first-child p {
