--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -22,6 +22,8 @@
     <title>{{ pageTitle }}</title>
     <meta name="description" content="{{ pageDescription }}"/>
     <link rel="icon" href="{{ '/favicon.ico' | url }}"/>
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ '/favicon-16x16.png' | url }}"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ '/favicon-32x32.png' | url }}"/>
     <link href="{{ '/css/style.css' | url }}" rel="stylesheet"/>
     <meta name="twitter:card" content="summary_large_image"/>
     {% if meta.twitterUsername %}
